--- a/practice_business/src/styles/Home.scss
+++ b/practice_business/src/styles/Home.scss
@@ -1215,7 +1215,7 @@
                 }
                 .home-container-top{
                     width: 100%;
-                    height: 60vh;
+                    height: 75vh;
                     .home-container-tagline{
                         min-height: 200px;
                         height: 80%;
@@ -1227,6 +1227,7 @@
                         background: #fff;
                         img{
                             max-width: 250px;
+                            margin-bottom: 10px;
                         }
                     }
                     
@@ -1241,7 +1242,13 @@
                     
                 }
                 .home-paralax-container{
-                    height: 40vh;
+                    height: 45vh;
+                    width: 100%;
+                    .paralax{
+                        width: 100%;
+                        height: 100%;
+                        background: url('../images/luis-vidal-FodEsaNZs48-unsplash.jpg') no-repeat center center /cover;                       
+                    }
                 }
     
                 .home-classes{
